# evolvia-verify-lab

./: .gitignore  Dockerfile  README.md  config.py  main.py  models.py  pyproject.toml  verify_lab.py
.github/workflows/: lambda-deploy.yml  lambda-lint.yml  prod-build.yml  staging-build.yml
checks/aws/basic/: lab_spec.json  verify.py
checks/aws/ec2-website/: lab_spec.json  verify.py
checks/aws/rds-mysql/: lab_spec.json  verify.py
checks/aws/s3-static-website/: lab_spec.json  verify.py
checks/azure/basic/: verify.py
checks/azure/mk-7-01-ai/: verify.py
checks/azure/mk-7-01-az-cli/: verify.py
checks/azure/mk-7-01-lb/: verify.py
checks/azure/mk-7-01-portal/: verify.py
checks/azure/mk-7-01-vmss/: verify.py
checks/azure/mk-7-01-webapp-node/: verify.py
checks/azure/mk-7-01-webapp-node-docker/: verify.py
checks/gcp/basic/: lab_spec.json  verify.py
lambda/authorizer/: handler.py
lambda/aws/basic/: handler.py
lambda/aws/ec2-website/: handler.py
lambda/aws/rds-mysql/: handler.py
lambda/aws/s3-static-website/: handler.py
lambda/dispatcher/: handler.py
