[project]
name = "evolvia-verify-lab"
version = "0.1.0"
description = "Lab verification microservice for Evolvia"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "azure-identity>=1.25.1",
    "azure-mgmt-compute>=37.1.0",
    "azure-mgmt-network>=30.1.0",
    "azure-mgmt-search>=9.2.0",
    "azure-mgmt-web>=10.1.0",
    "azure-search-documents>=11.6.0",
    "fastapi>=0.128.0",
    "uvicorn>=0.40.0",
]
