[project]
name = "evolvia-verify-lab"
version = "0.1.2"
description = "Lab verification microservice for Evolvia"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "email-validator>=2.3.0",
    "fastapi>=0.128.0",
    "requests>=2.32.0",
    "uvicorn>=0.40.0",
]

[project.optional-dependencies]
azure = [
    "azure-identity>=1.25.1",
    "azure-mgmt-compute>=37.1.0",
    "azure-mgmt-network>=30.1.0",
    "azure-mgmt-search>=9.2.0",
    "azure-mgmt-web>=10.1.0",
    "azure-search-documents>=11.6.0",
]
aws = [
    "boto3>=1.35.0",
]
gcp = [
    "google-cloud-compute>=1.22.0",
    "google-cloud-resource-manager>=1.14.0",
]
